@@ -9,18 +9,15 @@ import java.util.stream.Stream;
 
 public class FileReader {
 
-    public void readFile() {
-        ClassLoader loader = getClass().getClassLoader();
-        File file = new File(loader.getResource("names.txt").getFile());
+    public void readFile(final String fileName) throws FileReaderException {
+        ClassLoader classLoader = getClass().getClassLoader();
 
-        try (Stream<String> filelines = Files.lines(Paths.get(file.getPath()))){
-            filelines.forEach(System.out::println);
-        } catch (IOException e) {
-            System.out.println("Error: " + e);
+        try (Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(fileName).toURI()))) {
+            fileLines.forEach(System.out::println);
+        } catch (Exception e) {
+            throw new FileReaderException();
         } finally {
-            System.out.println("I'll be here, always!");
+            System.out.println("I am gonna be here... always!");
         }
-
-        System.out.println(file.getPath());
     }
 }
